--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2018"
 
 [dependencies]
 clap="~2.33.3"
+reqwest={version = "~0.11.6", features = ["json"] }
+tokio={version = "~1.12.0", features = ["full"] }
+serde="1.0.130"
+serde_json="1.0.68"
+serde_derive="1.0.130"
